def search was added

--- a/templates/header_nav.html
+++ b/templates/header_nav.html
@@ -37,7 +37,7 @@
                         </div>
                         <ul class="header__right__widget">
                            <li>
-                               <form method="GET" action="{% url 'index' %}">
+                               <form method="GET" action="{% url 'product:search' %}">
                                     <input type="search" name="q" placeholder="Search..." class="search_input">
                                </form>
 
