.gitignore was added

--- a/product/templates/product/shop_list.html
+++ b/product/templates/product/shop_list.html
@@ -18,7 +18,7 @@
                             <h1>Women’s fashion</h1>
                             <p>Sitamet, consectetur adipiscing elit, sed do eiusmod tempor incidid-unt labore
                                 edolore magna aliquapendisse ultrices gravida.</p>
-                            <a href="#">Shop now</a>
+                            <a href="{% url 'product:category' 1 %}">Shop now</a>
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                             <div class="categories__item set-bg" data-setbg="{% static 'img/categories/category-2.jpg' %}">
                                 <div class="categories__text">
                                     <h4 style="color: white;">Men’s fashion</h4>
-                                    <a href="#">Shop now</a>
+                                    <a href="{% url 'product:category' 2 %}">Shop now</a>
                                 </div>
                             </div>
                         </div>
@@ -44,7 +44,7 @@
                             <div class="categories__item set-bg" data-setbg="{% static 'img/categories/category-4.jpg' %}">
                                 <div class="categories__text">
                                     <h4>Cosmetics</h4>
-                                    <a href="#">Shop now</a>
+                                    <a href="{% url 'product:category' 5 %}">Shop now</a>
                                 </div>
                             </div>
                         </div>
@@ -52,7 +52,7 @@
                             <div class="categories__item set-bg" data-setbg="{% static 'img/categories/category-5.jpg' %}">
                                 <div class="categories__text">
                                     <h4>Accessories</h4>
-                                    <a href="#">Shop now</a>
+                                    <a href="{% url 'product:category' 4 %}">Shop now</a>
                                 </div>
                             </div>
                         </div>
