--- a/templates/base.html
+++ b/templates/base.html
@@ -51,31 +51,31 @@
         <div class="loader"></div>
     </div>
 
-    <!-- Offcanvas Menu Begin -->
-    <div class="offcanvas-menu-overlay"></div>
-    <div class="offcanvas-menu-wrapper">
-        <div class="offcanvas__close">+</div>
-        <ul class="offcanvas__widget">
-            <li><form method="GET" action="{% url 'index' %}">
-                <input type="search" name="q" placeholder="Search..." class="search_input">
-            </form></li>
-            <li><a href="#"><span class="icon_heart_alt"></span>
-                <div class="tip">2</div>
-            </a></li>
-            <li><a href="#"><span class="icon_bag_alt"></span>
-                <div class="tip">2</div>
-            </a></li>
-        </ul>
-        <div class="offcanvas__logo">
-            <a href="#"><img src="{% static 'img/logo.png' %}" alt=""></a>
-        </div>
-        <div id="mobile-menu-wrap"></div>
-        <div class="offcanvas__auth">
-            <a href="{% url 'account:login' %}">Login</a>
-            <a href="{% url 'account:register' %}">Register</a>
-        </div>
-    </div>
-    <!-- Offcanvas Menu End -->
+{#    <!-- Offcanvas Menu Begin -->#}
+{#    <div class="offcanvas-menu-overlay"></div>#}
+{#    <div class="offcanvas-menu-wrapper">#}
+{#        <div class="offcanvas__close">+</div>#}
+{#        <ul class="offcanvas__widget">#}
+{#            <li><form method="GET" action="{% url 'product:search' %}">#}
+{#                <input type="search" name="q" placeholder="Search..." class="search_input">#}
+{#            </form></li>#}
+{#            <li><a href="#"><span class="icon_heart_alt"></span>#}
+{#                <div class="tip">2</div>#}
+{#            </a></li>#}
+{#            <li><a href="#"><span class="icon_bag_alt"></span>#}
+{#                <div class="tip">2</div>#}
+{#            </a></li>#}
+{#        </ul>#}
+{#        <div class="offcanvas__logo">#}
+{#            <a href="#"><img src="{% static 'img/logo.png' %}" alt=""></a>#}
+{#        </div>#}
+{#        <div id="mobile-menu-wrap"></div>#}
+{#        <div class="offcanvas__auth">#}
+{#            <a href="{% url 'account:login' %}">Login</a>#}
+{#            <a href="{% url 'account:register' %}">Register</a>#}
+{#        </div>#}
+{#    </div>#}
+{#    <!-- Offcanvas Menu End -->#}
 
     <!-- Header Section Begin -->
     {% block header_nav %} {% endblock header_nav %}
